--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,17 +1,18 @@
 .story {
-    width: 75%;
-    margin: 0 auto;
-    box-shadow: 0 3rem 6rem rgba($color-black, .1);
-    background-color: $color-white;
-    border-radius: 3px;
-    padding: 6rem;
-    padding-left: 9rem;
-    font-size: $default-font-size;
-    transform: skewX(-12deg);
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
+  background-color: rgba($color-white, 0.6);
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: $default-font-size;
+  transform: skewX(-12deg);
+  
 
     &__shape {
         width: 15rem;
-        height: 15rem;        
+        height: 15rem;
         float: left;
         -webkit-shape-outside: circle(50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
@@ -19,23 +20,21 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
-        
+        overflow: hidden;
     }
 
     &__img {
-        height: 100%;        
+        height: 100%;
         transform: translateX(-4rem) scale(1.4);
         backface-visibility: hidden;
-        transition: all .5s;
-
+        transition: all 0.5s;
     }
 
-    &__text {        
+    &__text {
         transform: skewX(12deg);
     }
 
     &__caption {
-        
         position: absolute;
         top: 50%;
         left: 50%;
@@ -46,9 +45,8 @@
         font-weight: 500;
         text-align: center;
         opacity: 0;
-        transition: all .5s;
         backface-visibility: hidden;
-        
+        transition: all 0.5s;
     }
     &:hover &__caption {
         opacity: 1;
@@ -58,6 +56,5 @@
     &:hover &__img {
         transform: translateX(-4rem) scale(1);
         filter: blur(3px) brightness(80%);
-
     }
 }
